crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__keep_alive_computed_key_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: segments
---
[
    "2:0 \"export f\" -> \"<KeepAli\"",
    "3:47 \"MyComp\\\")\" -> \"MyComp /\"",
]
