crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__keep_alive_static_code.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: code
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, createComponent as _createComponent, VaporKeepAlive as _VaporKeepAlive, extend as _extend } from 'vue';

export function render(_ctx) {
  const _component_MyComp = _resolveComponent("MyComp")
  const n1 = _createComponent(_VaporKeepAlive, {
    include: () => ("First"),
    max: () => ("2")
  }, {
    "default": _extend(() => {
      const n0 = _createComponentWithFallback(_component_MyComp)
      return n0
    }, { _: 1 })
  }, true)
  return n1
}
