crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__once_event_callback_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: segments
---
[
    "1:23 \"button> \" -> \"button v\"",
    "4:0 \"export f\" -> \"<button \"",
    "7:32 \"(event) \" -> \"(event) \"",
    "7:43 \"_ctx.rec\" -> \"record(e\" [record]",
    "8:32 \"_ctx.lab\" -> \"label }}\" [label]",
]
