crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__select_model_computed_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: segments
---
[
    "1:23 \"select><\" -> \"select v\"",
    "1:31 \"option v\" -> \"option v\"",
    "1:38 \"value=\\\\\\\"\" -> \"value=\\\"a\"",
    "1:46 \"a\\\\\\\">A</o\" -> \"a\\\">A</op\"",
    "1:50 \"A</optio\" -> \"A</optio\"",
    "3:0 \"export f\" -> \"<select \"",
]
